--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "flask>=3.1.2",
 ]
+
+[build-system]
+requires = ["uv_build>=0.9.2,<0.10.0"]
+build-backend = "uv_build"
