--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "flask>=3.1.2",
+    "flask-sqlalchemy>=3.1.1",
+    "psycopg2>=2.9.11",
 ]
 
 [build-system]
