--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,26 @@ dependencies = [
     "flask>=3.1.2",
     "flask-sqlalchemy>=3.1.1",
     "psycopg2>=2.9.11",
+    "pytest>=8.4.2",
 ]
 
 [build-system]
 requires = ["uv_build>=0.9.2,<0.10.0"]
 build-backend = "uv_build"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "-v",
+    "--tb=short",
+    "--strict-markers",
+    "--disable-warnings",
+]
+markers = [
+    "unit: Unit tests",
+    "integration: Integration tests",
+    "slow: Slow running tests",
+]
