--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "flask>=3.1.2",
     "flask-sqlalchemy>=3.1.1",
     "psycopg2>=2.9.11",
+    "psycopg2-binary==2.9.11",
     "pytest>=8.4.2",
 ]
 
