--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "psycopg2>=2.9.11",
     "psycopg2-binary==2.9.11",
     "pytest>=8.4.2",
+    "pytest-cov==6.0.0",
 ]
 
 [build-system]
