--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ services:
   web:
     build: .
     container_name: pfm_web_prod
-    command: python3 src/app.py
+    command: uv run src/app.py
     ports:
       - "5001:5000"
     environment:
