--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
   web:
     build: .
     container_name: milestone1_web
-    command: python3 src/app.py
+    command: uv run src/app.py
     volumes:
       - .:/app
       - /app/__pycache__
