PFM-81 uv dependency added to the project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,8 @@ markers = [
     "integration: Integration tests",
     "slow: Slow running tests",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.4",
+]
