--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,3 @@
 [aws_ec2]
-172.31.0.148 ansible_host=15.228.232.239 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/SoftserveFM.pem
+172.31.0.148 ansible_host=18.228.24.106 ansible_user=ubuntu ansible_ssh_private_key_file=
+~/.ssh/SoftserveFM.pem project_dir=/home/ubuntu/Personal-Finance-Manager
