--- a/playbook.yml
+++ b/playbook.yml
@@ -1,10 +1,5 @@
----
-- name: Install Docker and run Makefile
-  hosts: all
+- hosts: all
   become: yes
-
-  vars:
-    make_target: "build"
 
   tasks:
     - name: Install required packages
@@ -13,8 +8,7 @@
           - apt-transport-https
           - ca-certificates
           - curl
-          - gnupg
-          - lsb-release
+          - software-properties-common
           - make
         state: present
         update_cache: yes
@@ -26,25 +20,27 @@
 
     - name: Add Docker repository
       apt_repository:
-        repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename }} stable"
+        repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
         state: present
 
     - name: Install Docker
       apt:
-        name:
-          - docker-ce
-          - docker-ce-cli
-          - containerd.io
+        name: docker-ce
         state: present
-        update_cache: yes
 
     - name: Ensure Docker service enabled and running
       service:
         name: docker
-        state: started
         enabled: yes
+        state: started
+
+    - name: Install docker-compose v1
+      get_url:
+        url: https://github.com/docker/compose/releases/download/1.29.2/docker-compose-Linux-x86_64
+        dest: /usr/local/bin/docker-compose
+        mode: "0755"
 
     - name: Run make target
-      command: make {{ make_target }}
+      command: make build
       args:
-        chdir: /opt/project
+        chdir: "{{ project_dir }}"
